0.207 2023-09-04
  [Prerequirement Changes]
    * SPVM::Sys 0.486 is required.
    * SPVM 0.989040 is required.
  [New Features]
    * The IO::Socket::UNIX class is added.
  [Incompatibe Changes]
    * input_output_number is incremented.
    * The following fields and methods in the IO::Socket class are added, deleted, or changed.
      
      -  has timeout : protected ro int;
      +  has Timeout : protected int;
      +  method timeout : int ();
      
      -  has sockdomain : protected ro int;
      +  has Domain : protected int;
      +  method sockdomain : int ();
      
      -  has socktype : protected ro int;
      +  has Type : protected int;
      +  method socktype : int ();
      
      -  has protocol : protected ro int;
      +  has Proto : protected ro int;
      +  method protocol : int ();
      
      -  has listen_backlog : protected int;
      +  has Listen : protected int;
      
      -  method peerport : int ();
      -  method peerhost : string ();
      
      -  has peername : protected ro Sys::Socket::Sockaddr;
      +  has peername : protected Sys::Socket::Sockaddr;
      +  method peername : Sys::Socket::Sockaddr ();
    
    * The following fields and methods in the IO::File class are added, deleted, or changed.
    
      + method input_line_number : long ();
      
      + method set_input_line_number : void ($input_line_number : long);
      
    * fd field in IO::Socket class is moved to IO::Handle class.
    
0.206 2023-09-04
  [Prerequirement Changes]
    * SPVM::Sys 0.485 is required.
0.205 2023-09-04
  [Prerequirement Changes]
    * SPVM::Sys 0.484 is required.
0.204003 2023-08-22
  [Changes]
    * Type comments of the ioctl method in the IO::Handle are changed.
      -  method ioctl : int ($request : int, $request_arg : object = undef of Byte|Short|Int|Long|Float|Double|object);